tests/paczka1/small_fuzzy/97048425.err
Error in line 1: RZm0Sv3CbB S486 75,1
Error in line 10: y9YEdZ A654 1,9
